tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__BeamMeUpScotty-AAAAAAAAAAAAAAAAAAAJ4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2529,
  "prerequisites": [
    2505,
    2509
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to teleport stuff around using these, you'll need a drive in the SIOP, and at least 6 pylons hooked up. The pylons need to indicate the X, Y and Z dimensions, with you needing 1 more than you would think. If the efficiency goes below 100%, the AE cost will balloon enormously, so add more pylons to counteract that. After using a redstone signal to activate the SIOP, the blocks will be moved to the spatial IO dim, and the drive will move to the output, so you can send it somewhere else. This is very important to do properly if you want to use it as a teleporter. Otherwise, you can get stuck there. Your network will need to be able to hold all the power needed to teleport at once, so you'll need at least one energy cell. You can only have one Pylon setup per controller, so consider putting them on a subnetwork.\n\nUsing 2 in the X and Z dimensions and 3 in the Y will give you a 1x2x1 teleporter to teleport yourself. You'll want a SIOP port on each side for sending and for receiving. But you'll still need to design a redstone contraption to activate them properly!\n\nRead this if you want to know more about spatial IO in general, and larger setups: [url]https://old.reddit.com/r/feedthebeast/comments/3c2b2r/a_treatise_on_nocheat_smp_ae2_spatial_io/[/url]\nAlso see this if you want to see a fancy teleporter: [url]https://old.reddit.com/r/feedthebeast/comments/2mhrf8/ae2_spatial_transporters/[/url]\n\n[warn]Spatial cells, once used, will only work in the XYZ dimensions first used, with no way to format or recraft. Test in creative first![/warn]\n\n[warn]Expect your world to lag for a second after using, blame AE.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Beam Me Up, Scotty",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2505,
    2509
  ],
  "rewards": [],
  "tasks": []
}
