tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__BundledAEChannel-AAAAAAAAAAAAAAAAAAAAyw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 203,
  "prerequisites": [
    181
  ],
  "properties": {
    "auto_claim": false,
    "desc": "P2P tunnels. You'll probably want a bunch of them! They act as teleport points from one place to another for the contained information.\n\nThey can pack up to 32 channels into 1 channel and transport those to the destination P2P bus. Each P2P tunnel requires 1 free channel. P2P connections cannot be nested, but one transport cable can carry multiple P2P connections. For a normal fluix cable, that's 4 P2P connections, and 16 for dense.\n\nYou can use separate cables to connect input P2Ps to the controller and to transport from the controller to around your base, allowing for 32 output P2Ps on one dense cable. Alternatively you can use an entirely separate controller as a transport network.\n\nGenerally, you'll want to have the first point be one side of an ME Controller block (remember you can add more!), and the other where some of your machines are.\n\nA nice online guide can be found at [url]https://wiki.gtnewhorizons.com/wiki/Applied_Energistics_2[/url] under P2P tunnels.\n\nIf you want to use one of the P2P tunnels for something §oother§r than ME channels, use an applicable item on the center of the face of the tunnel, (for example, a GT cable for GT EU, redstone for RS signal, an RF conduit for RF, a torch for light, a bucket for fluid, a chest for items, or an OC cable for OC) and it will convert to that type, even if you pick it up. Use a fluix cable to change it back.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bundled AE Channels",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    181
  ],
  "rewards": [],
  "tasks": []
}
