tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__CardsforAE2Nerds-TP2PEGHQRnGKgKYFziEjrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7048210871438353326,
  "prerequisites": [
    2539
  ],
  "properties": {
    "auto_claim": false,
    "desc": "[quest]Equal Distribution, Fake Crafting, Locking, and Advanced Blocking Cards![/quest]\n\n§6Equal Distribution Card:§r\n\nThe Equal Distribution Card will evenly divide a cell's capacity between types or partitions.\n\n§6Fake Crafting Card:§r \n\nThe Fake Crafting Card will tell your ME System to complete a craft without expecting the final resulting item. \n\nThis can be handy for creating fake patterns for entire multiblocks or setups by collecting the individual items needed in one craft.\n\nThe card can only be inserted into:\n\n§cME Dual Interface\nME Interface\nP2P Tunnel - ME Dual Interface§r \n\n§6Locking Card:§r \n\nThe Locking Card allows an interface to optionally block new crafts from being started for one of the following conditions:\n\n§cWhile Redstone is low\nWhile Redstone is high\nAfter a craft has been pushed, until a redstone pulse is received\nAfter a craft has been pushed, until the results have returned to the same interface§r\n\n§6Advanced Blocking Card:§r\n\nThe Advanced Blocking Card is able to ignore non-consumables in a subnet for more complicated automations. \n\nIn a standard subnet, where two interfaces are facing each other, the Advanced Blocking Card is to be §9placed on the §lsubnet interface.§f",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cards for AE2 Nerds!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2539
  ],
  "rewards": [],
  "tasks": []
}
