tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__Cribs-4pCol8RvR3G0pS2zVqpY1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14154610705959639253,
  "prerequisites": [
    1493,
    2877
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As your researches for Applied Greg continued, you found a way to combine ME interface's pattern processing ability with input buses, §lcrafting input buses§r! Now, you can directly place patterns into input bus. However, input buses lacked sufficient item space and computational power to process items coming from your ME network. Thus, you added additional storage and circuits.\n\nYou can even place non-consumable items like lenses, molds inside!! However, consumable items won't do anything.\n\nBut, still you lack enough technology to process fluids, they are just not good for electronics.\n\nCrafting input bus is fully isolated from other buses/hatches, so you may have to change your patterns.\n\n[warn]Crafting input proxy[/warn] will let you wallshare multiblocks without actually wallsharing them. §lUIV-Tier§r\n\n[warn]Crafting input buffer[/warn] will be §9§owaterproof§r. §lUEV-Tier§r",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cribs",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    2877
  ],
  "rewards": [],
  "tasks": []
}
