tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__CutthePower-AAAAAAAAAAAAAAAAAAAJ8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2544,
  "prerequisites": [
    2523
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The ME Toggle Bus allows you to cut off access through a cable if it doesn't receive a redstone signal. The inverted version is, well, inverted. It must be placed between the cables, like a Quartz Fiber.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cut the Power!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2523
  ],
  "rewards": [],
  "tasks": []
}
